--- a/src/main/webapp/resources/css/main_base.css
+++ b/src/main/webapp/resources/css/main_base.css
@@ -9,7 +9,7 @@ body {
 
 .header-link {
 	font-weight: 500;
-	font-size: 14px;
+	font-size: 13px;
 	color: #949EA7;
 	text-decoration: none;
 	position: relative;
@@ -61,7 +61,7 @@ body {
 }
 
 .btn-sus1 {
-	font-weight: 500;
+	font-weight: 700;
 	font-size: 16px;
 	padding: 10px 25px 10px 25px;
 	border-radius: 20px;
@@ -122,11 +122,11 @@ body {
 
 .c-login-main {
 	margin-top: 40px;
-	display: flex;
+	position:relative;
 	width: 100%;
 	height: 500px;
 	flex-basis: 100%;
-	padding: 0px;
+	padding: 0;
 }
 
 .d-izquierda {
@@ -136,26 +136,29 @@ body {
 }
 
 .d-derecha {
-	background-color: #f7fcff;
-	height: 100%;
-	flex: 1;
+	background:transparent;
+	position:absolute;
+	margin: -480px 600px;
 	text-align: center;
+	width: 350px;
 }
 
 .d-login {
-	padding: 50px 60px;
+	padding: 20px;
 }
 
 .t-login {
 	font-weight: 700;
 	color: black;
 	font-size: 35px;
-	margin: 0;
+	margin: 0 0 0 50px;
+	text-align: left;
 }
 
 .t-eresnuevo {
 	color: #949EA7;
 	margin: 0;
+	font-size: 14px;
 }
 
 img {
@@ -168,15 +171,24 @@ img {
 	color: white;
 	font-size: 20px;
 	background: #33658A;
+	box-shadow: 0px 3px 17px rgba(40, 104, 177, 0.53);
 	padding: 9px 70px;
 	border-radius: 38px;
 	border: none;
 }
 
+
+
 #btnEntrar:hover {
 	background: #86bbd8;
 }
 
+
+.registrate-aqui{
+	color: black;
+	font-weight: 700;
+	font-size: 16px;
+}
 #correoElectronico {
 	height: 36px;
 	background: #F0F4FF 0% 0% no-repeat padding-box;
@@ -369,11 +381,17 @@ img {
 	box-shadow: 0px 8px 40px rgba(51, 101, 138, 0.18);
 }
 .p-config-izq-pref{
+	margin-top:2em;
 	background: rgba(255,255,255,0.95);
 	height: 448px;
 	padding:1em;
 	border-radius: 15px;
-	box-shadow: 0px 8px 40px rgba(51, 101, 138, 0.18);
+	width:250px;
+	box-shadow: 0px 0px 40px rgba(51, 101, 138, 0.30);
+}
+.p-config-izq-pref h3{
+	text-align: center;
+	margin-bottom:2em;
 }
 .c-roomieinicio{
 	display:flex;
@@ -383,13 +401,118 @@ img {
 	width: 100%;
 }
 .roomie-datatable{
-	width: 50%;
+	margin-top:2em;
+	width: 60%;
 }
 
-#lstVivienda{
+#cbo-distrito, #cbo-mascota, #cbo-edad{
+	background: #86bbd8;
+	padding: 8px 10px;
+	border-radius: 5px;
+	border:none;
+	box-shadow: 0px 0px 40px rgba(51, 101, 138, 0.30);
 	font-family: 'Be Vietnam Pro';
+	font-size: 13px;
+	letter-spacing: 0;
+	font-weight: 500;
 	
 }
+
+.r-main-config {
+	width:100%;
+	height:580px;
+	margin-top:4em;
+	position: relative;
+
+}
+.registro1R {
+	background: rgba(255,255,255,0.95);
+	display: flex;
+	box-shadow: 0px 0px 40px rgba(51, 101, 138, 0.30);
+	border: 1px solid #61616117;
+	border-radius: 20px;
+	padding: 1em;
+	position: absolute;
+	flex-basis: 100%;
+	margin: -570px 0 0 160px;
+	
+}
+
+.r-1{
+	background: transparent;
+}
+.r-1 h2{
+	font-weight: 800;
+	font-size: 30px;
+}
+
+.r-2{
+	background: transparent;
+}
+.r-1, .r-2{
+	padding:2em;
+}
+
+#l-RE-email, #l-RE-password, #l-RE-NombresCompletos, #l-RE-ApellidosCompletos,
+#l-RE-nrocelular, #l-RE-direccion, #l-RE-username, #l-RE-fnacimiento, #l-RE-genero,
+#l-RE-presentacion, #l-RE-nacionalidad{
+	font-size: 12px;
+	color: #2F4858;
+}
+
+#i-RE-nombrescompletos, #i-RE-apellidoscompletos,
+#i-RE-email, #i-RE-password, #i-RE-nrocelular, #i-RE-username,
+#i-RE-nacionalidad, #ca-RE-fnacimiento, #cbo-RE-genero, #i-RE-presentacion{
+	
+height: 36px;
+	background: #F0F4FF 0% 0% no-repeat padding-box;
+	background: #F0F4FF 0% 0% no-repeat padding-box;
+	border: 1px solid #394B736E;
+	border-radius: 6px;
+	width: 200px;
+	border: 1px solid grey;
+}
+
+#cbo-RE-genero{
+	background: #86bbd8;
+	padding: 8px 10px;
+	border-radius: 5px;
+	border:none;
+	box-shadow: 0px 0px 40px rgba(51, 101, 138, 0.30);
+	font-family: 'Be Vietnam Pro';
+	font-size: 13px;
+	letter-spacing: 0;
+	font-weight: 500;
+	
+}
+
+#btn-RE-registroR {
+	font-size: 16px;
+	border: none;
+	font-family: 'Be Vietnam Pro';
+	color: white;
+	font-weight: 700;
+	background: #33658A;
+	border-radius: 30px;
+	padding: 1em 4em;
+	box-shadow: 0px 8px 40px rgba(40, 104, 177, 0.53);
+	margin-left: 7px;
+}
+#btn-RE-registroR:hover{
+	background: #c5deec;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
