--- a/src/main/webapp/resources/css/main_base.css
+++ b/src/main/webapp/resources/css/main_base.css
@@ -455,14 +455,17 @@ img {
 
 #l-RE-email, #l-RE-password, #l-RE-NombresCompletos, #l-RE-ApellidosCompletos,
 #l-RE-nrocelular, #l-RE-direccion, #l-RE-username, #l-RE-fnacimiento, #l-RE-genero,
-#l-RE-presentacion, #l-RE-nacionalidad{
+#l-RE-presentacion, #l-RE-nacionalidad, #l-RV-nombrevivienda, #l-RV-direccion, #l-RV-nrocuartos, #l-RV-nrobanios,
+#l-RV-nropisos, #l-RV-nropersonas{
 	font-size: 12px;
 	color: #2F4858;
 }
 
 #i-RE-nombrescompletos, #i-RE-apellidoscompletos,
 #i-RE-email, #i-RE-password, #i-RE-nrocelular, #i-RE-username,
-#i-RE-nacionalidad, #ca-RE-fnacimiento, #cbo-RE-genero, #i-RE-presentacion{
+#i-RE-nacionalidad, #ca-RE-fnacimiento, #cbo-RE-genero, #i-RE-presentacion,
+#i-RV-nombrevivienda, #i-RV-direccion, #i-RV-nrocuartos, #i-RV-nrobanios,
+#i-RV-nropisos, #i-RV-nropersonas{
 	
 height: 36px;
 	background: #F0F4FF 0% 0% no-repeat padding-box;
@@ -501,7 +504,31 @@ height: 36px;
 #btn-RE-registroR:hover{
 	background: #c5deec;
 }
+.v-main-config {
+	width:100%;
+	height:580px;
+	margin-top:3em;
+	position: relative;
 
+}
+.registroV {
+	background: rgba(255,255,255,0.95);
+	box-shadow: 0px 0px 40px rgba(51, 101, 138, 0.30);
+	border: 1px solid #61616117;
+	border-radius: 20px;
+	padding: 2em;
+	position: absolute;
+	flex-basis: 100%;
+	margin: -570px 0 0 160px;
+}
+
+#registro-vivienda{
+	display: flex;
+	justify-content: space-between;
+}
+#registro-vivienda div{
+	padding:2em;
+}
 
 
 
